--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<meta charset="UTF-8"
-					<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title SNES Color Wheel</title>
 	</head>
 	<body>
-		Hello World!?
+		<h1>Template</h1>
+		<p>This is a blank template for a web page.</p>
 	</body>
 </html>
